# blockzilla

./: .gitignore  Cargo.toml  README.md  TODO.md  build_cache.sh
blockzilla/: Cargo.toml  README.md
blockzilla/src/: main.rs
blockzilla/src/commands/: analyze.rs  dump_log_strings.rs
crates/blockzilla-format/: Cargo.toml
crates/blockzilla-format/src/: blockhash_registry.rs  lib.rs  reader.rs  registry.rs  writer.rs
crates/blockzilla-format/src/compact/: log.rs  meta.rs  mod.rs  signature.rs  tx.rs
crates/blockzilla-format/src/program_logs/: associated_token_account.rs  mod.rs  system_program.rs  token.rs  token_2022.rs
crates/car-reader/: Cargo.toml  README.md  build.rs
crates/car-reader/src/: car_block_group.rs  car_stream.rs  cid.rs  confirmed_block.proto  convert_metadata.rs  error.rs  lib.rs  metadata_decoder.rs  node.rs  reader.rs  stored_transaction_error.rs  stored_transaction_status_meta.rs  versioned_transaction.rs
crates/compact-archive/: Cargo.toml  README.md
crates/compact-archive/src/: error.rs  format.rs  lib.rs  reader.rs  writer.rs
crates/optimize-car-archive/: Cargo.toml  README.md
crates/optimize-car-archive/src/: build.rs  build_all.rs  build_blockhash_registry.rs  build_registry.rs  compact.rs  main.rs
docs/: dev-notes.md
