[workspace]
resolver = "2"
members = [
    "crates/car-reader",
    #"crates/compact-archive",
    #"crates/optimize-car-archive",
    "blockzilla",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ferno-ag/blockzilla"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false
debug = false
incremental = false
overflow-checks = false
