[package]
name = "blockzilla"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "blockzilla"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tracing = "0.1"
tracing-subscriber = "0.3"
car-reader = { path = "../crates/car-reader" }
mimalloc = "0.1.48"
pprof = { version = "0.15", features = ["flamegraph", "prost-codec","protobuf"] }
prost = "0.12"
ahash = "0.8.12"
zstd = "0.13.3"
