[package]
name = "car-reader"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
bytes = "1"
cid = "0.11"
tracing = "0.1"
ahash = "0.8.12"
minicbor = { version = "2.1.3", features = ["full"] }
wincode = { version = "0.2.5", features = ["derive", "solana-short-vec"] }
zstd = "0.13.3"
prost = "0.14.1"
prost-types = "0.14.1"
solana-address = "2.0.0"
solana-hash = "4.0.1"
solana-signature = "3.1.0"
solana-transaction = "3.0.2"
solana-message = "3.0.1"
solana-transaction-status = "3.1.5"
solana-transaction-context = "3.1.5"
solana-transaction-error = "3.0.0"


[build-dependencies]
prost-build = "0.14.1"
