[package]
name = "car-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "reader"
path = "src/bin/reader.rs"
required-features = ["reader"]

[features]
default = []
reader = ["dep:clap", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
bytes = "1"
cid = "0.11"
rustc-hash = "2.1"
minicbor = { version = "2.1.3", features = ["full"] }
wincode = { version = "0.2.5", features = ["derive", "solana-short-vec"] }
zstd = "0.13.3"
prost = "0.14.1"
prost-types = "0.14.1"
solana-address = "2.0.0"
solana-hash = "4.0.1"
solana-signature = "3.1.0"
solana-transaction = "3.0.2"
solana-message = "3.0.1"
solana-transaction-error = "3.0.0"
# reader dependencies
clap = { version = "4", features = ["derive"] , optional = true}
tracing = { version = "0.1" , optional = true}
tracing-subscriber = { version = "0.3" , optional = true}

[build-dependencies]
prost-build = "0.14.1"
