[package]
name = "compact-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
memmap2 = "0.9.9"
postcard = "1.1.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

