[package]
name = "optimize-car-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "optimize-car-archive"
path = "src/main.rs"

[dependencies]
car-reader = { path = "../car-reader" }
blockzilla-format = { path = "../blockzilla-format", features = ["solana"] }
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
solana-message = "3.0.1"
solana-pubkey = "4.0.0"
solana-transaction = "3.0.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wincode = "0.2.5"
zstd = "0.13.3"
minicbor = { version = "2.1.3", features = ["full"] }


[dev-dependencies]
